# dowa

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dowa/: __main__.py  app.py  config.py  metrics.py  scraper.py  storage.py
src/dowa/static/: dashboard.js  detail.js  name.js  styles.css
src/dowa/templates/: detail.html  index.html  name.html
