[project]
name = "dowa"
version = "0.1.0"
description = "Dockerized container stats dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "docker>=7.1",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[project.scripts]
dowa = "dowa.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dowa"]

[tool.uv]
package = true
